syntax = "proto3";

package giftduels.payment.v1;

import "giftduels/payment/v1/payment.proto";
import "giftduels/shared/v1/common.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/payment/v1;paymentv1";

service PaymentPublicService {
  rpc DepositTon(DepositTonRequest) returns (DepositTonResponse) {}

  // Get current user balance
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc GetBalance(google.protobuf.Empty) returns (GetBalanceResponse) {}

  rpc GetWithdrawOptions(GetWithdrawOptionsRequest) returns (GetWithdrawOptionsResponse) {}
}

message GetWithdrawOptionsRequest {
  shared.v1.GiftId gift_id = 1;
}

message GetWithdrawOptionsResponse {
  message TonOption {
    shared.v1.TonAmount ton_cost = 1;
    bool is_available = 2;
  }
  message StarsOption {
    shared.v1.StarsAmount stars_cost = 1;
    bool is_available = 2;
  }
  TonOption ton = 1;
  StarsOption stars = 2;
}

message DepositTonRequest {
  shared.v1.TonAmount ton_amount = 1;
}

message DepositTonResponse {
  string deposit_id = 1;
  uint64 nano_ton_amount = 2;
  string payload = 3;
}

message GetBalanceResponse {
  UserBalanceView balance = 1;
}
